--- a/themes/mainroad/layouts/partials/header.html
+++ b/themes/mainroad/layouts/partials/header.html
@@ -32,6 +32,7 @@
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
 <meta name="google-site-verification" content="Pcz65kRkk8BLttWC5DRf21eycqasH3U_N_SRA7urdhM" />
+<meta name="msvalidate.01" content="452E697B3CF096A554D2A63CFFCB0F64" />
 </head>
 <body class="body {{ if (.Site.Params.leftsidebar) or (.Params.leftsidebar) }}body-left-sidebar{{ else }}body-right-sidebar{{ end }}">
 	<div class="container container-outer">
